# busn41902-code

./: .gitignore  INCONSISTENCIES.md  LICENSE  README.md  _quarto.yml  _template_demo.py  index.qmd  pyproject.toml
.github/workflows/: docs.yml  tests.yml
L1/: demo_conditional_mean.py  demo_ols.py  demo_spline.py
busn41902/: __init__.py  _io.py  data.py  regression.py
data/: MROZ.xlsx  README.md  mishkin.txt
tests/: conftest.py  test_data.py  test_drift.py  test_io.py  test_regression.py
