[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "busn41902"
version = "0.1.0"
description = "Python companion code for BUSN 41902: Statistical Inference I"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Dafu Zhu", email = "dafuzhu@uchicago.edu" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "jupytext>=1.16",
]

[tool.hatch.build.targets.wheel]
packages = ["busn41902"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E741"]   # allow l, I, etc. (we have lag `l` in HAC code)

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
