[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "busn41902"
version = "0.1.0"
description = "Python companion code for BUSN 41902: Statistical Inference I"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Dafu Zhu", email = "dafuzhu@uchicago.edu" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.4",
    "jupytext>=1.16",
    "nbclient>=0.10",
    "ipykernel>=6.29",
]

[tool.hatch.build.targets.wheel]
packages = ["busn41902"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E741",   # allow l, I, etc. (we have lag `l` in HAC code)
    "N803",   # allow uppercase argument names (X, K, D — standard matrix notation)
    "N806",   # allow uppercase variable names (X, D — standard matrix notation)
]

[tool.ruff.lint.per-file-ignores]
# Template demo file: imports `plt`, `np`, `save_figure` to model the canonical
# demo shape; nothing in the template body uses them yet (that's the point).
"_template_demo.py" = ["F401", "I001"]

[tool.ruff.format]
quote-style = "double"
# Demo files use Quarto cell-option syntax (`#|` with no space) and the
# d2l.ai `# @save` mirror marker. Both are invariants the formatter must
# not rewrite — exclude demo files from `ruff format` while keeping
# `ruff check` (lint) enabled on them.
exclude = ["L*/demo_*.py", "_template_demo.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
